Plot - Add basic MC shap and test script

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,6 @@ tags
 [._]*.un~
 
 # End of https://www.gitignore.io/api/c,git,vim,c++,linux,python
+AliAnalysisTaskJpsiJetFilter.h
+AliAnalysisTaskJpsiJetFilter.cxx
+Plot/cTest.pdf
